Closed
Bug 530979
Opened 16 years ago
Closed 16 years ago
NJ: Build errors for lirasm.cpp on solaris with sun studio.
Categories
(Core Graveyard :: Nanojit, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: leon.sha, Assigned: leon.sha)
Details
(Whiteboard: fixed-in-nanojit, fixed-in-tracemonkey)
Attachments
(1 file)
|
1.21 KB,
patch
|
graydon
:
review+
|
Details | Diff | Splinter Review |
"./lirasm/lirasm.cpp", line 384: Error: Multiple declaration for quad.
"./lirasm/lirasm.cpp", line 574: Error: Could not find a match for std::multimap<std::string, nanojit::LIns*, std::less<std::string>, std::allocator<std::pair<const std::string, nanojit::LIns*>>>::insert(std::pair<std::string, nanojit::LIns*>) needed in FragmentAssembler::assemble_jump(bool).
"./lirasm/lirasm.cpp", line 846: Error: Cannot use std::pair<__rwstd::__rb_tree<std::string, std::pair<const std::string, nanojit::LIns*>, __rwstd::__select1st<std::pair<const std::string, nanojit::LIns*>, std::string>, std::less<std::string>, std::allocator<std::pair<const std::string, nanojit::LIns*>>>::iterator, __rwstd::__rb_tree<std::string, std::pair<const std::string, nanojit::LIns*>, __rwstd::__select1st<std::pair<const std::string, nanojit::LIns*>, std::string>, std::less<std::string>, std::allocator<std::pair<const std::string, nanojit::LIns*>>>::iterator> to initialize std::pair<__rwstd::__rb_tree<std::string, std::pair<const std::string, nanojit::LIns*>, __rwstd::__select1st<std::pair<const std::string, nanojit::LIns*>, std::string>, std::less<std::string>, std::allocator<std::pair<const std::string, nanojit::LIns*>>>::const_iterator, __rwstd::__rb_tree<std::string, std::pair<const std::string, nanojit::LIns*>, __rwstd::__select1st<std::pair<const std::string, nanojit::LIns*>, std::string>, std::less<std::string>, std::allocator<std::pair<const std::string, nanojit::LIns*>>>::const_iterator>.
"./lirasm/lirasm.cpp", line 971: Error: Cannot cast from std::string to _quad.
4 Error(s) and 2 Warning(s) detected.
I add __SUNPRO_CC here because some standard language features are disabled for sun studio. http://developers.sun.com/sunstudio/documentation/ss12/mr/READMEs/c++_faq.html#LibComp3 describe the reason for that.
Attachment #414432 -
Flags: review? → review?(graydon)
Updated•16 years ago
|
Attachment #414432 -
Flags: review?(graydon) → review+
Whiteboard: fixed-in-nanojit
Comment 3•16 years ago
|
||
Whiteboard: fixed-in-nanojit → fixed-in-nanojit, fixed-in-tracemonkey
Comment 4•16 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Updated•12 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•