 Bug 530979 -  NJ: Build errors for lirasm.cpp on solaris with sun studio. r=graydon

--HG--
extra : convert_revision : 69ef86e45856c850accc542111053c4387a8b804